[package]
name = "rust-js-engines-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["max-lt"]

[dependencies]
lazy_static = "1.4.0"
v8 = "0.75.0"
regex = "1.9.3"
rusty_jsc = "0.1.0"
rusty_jsc_macros = "0.1.0"
boa_engine = { version = "0.17.0" }

[[example]]
name = "v8"
path = "examples/run-v8/run_v8.rs"

[[example]]
name = "jsc"
path = "examples/run-jsc/run_jsc.rs"

[[example]]
name = "boa"
path = "examples/run-boa/run_boa.rs"
